--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+<uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -26,6 +27,8 @@
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".settingsActivity"/>
         <activity android:name=".galleryActivity"/>
+        <activity android:name=".webviewActivity"/>
+        <activity android:name=".AudioActivity" />
 
     </application>
 
